[#70] fix(Post): Post 기능 수정